--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-PORT=8080      # default port to run on
-NC_DB=pg://db.rrurzzhcltvxihmtqgbk.supabase.co:5432?u=postgres&p=Mv4EkzA^78Yvu&d=postgres	    #See our database URLs	A local SQLite will be created in root folder
+PORT=8080
+NC_DB=pg://db.rrurzzhcltvxihmtqgbk.supabase.co:5432?u=postgres&p=Mv4EkzA^78Yvu&d=postgres
+NC_AUTH_JWT_SECRET=fd6e8f5d-0270-4de8-b9e0-b5f99eb6c312
 #DATABASE_URL=	    #JDBC URL Format. Can be used instead of NC_DB. Used in 1-Click Heroku deployment
 #DATABASE_URL_FILE=	    #path to file containing JDBC URL Format. Can be used instead of NC_DB. Used in 1-Click Heroku deployment
 #NC_PUBLIC_URL= 	#Used for sending Email invitations	Best guess from http request params
-NC_AUTH_JWT_SECRET=fd6e8f5d-0270-4de8-b9e0-b5f99eb6c312	    #JWT secret used for auth and storing other secrets	A Random secret will be generated
 #NC_SENTRY_DSN=	    #For Sentry monitoring
 #NC_CONNECT_TO_EXTERNAL_DB_DISABLED=	#Disable Project creation with external database
 #NC_DISABLE_TELE=	    #Disable telemetry
